--- a/AdaFace.ipynb
+++ b/AdaFace.ipynb
@@ -13,7 +13,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CsZpKuc0q99i"
+        "id": "CsZpKuc0q99i",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -52,7 +55,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xNhNoj2DXNFu",
-        "outputId": "a3447dba-0669-43f5-da65-87a8195fdfc3"
+        "outputId": "a3447dba-0669-43f5-da65-87a8195fdfc3",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [
         {
@@ -76,7 +82,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "d3APgInkXN_u"
+        "id": "d3APgInkXN_u",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -108,7 +117,10 @@
           "height": 346
         },
         "id": "OJt597CAXQ3P",
-        "outputId": "1093e968-6985-4b76-f969-bc3debf35fa7"
+        "outputId": "1093e968-6985-4b76-f969-bc3debf35fa7",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -134,7 +146,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "upmyNd1zYy3R"
+        "id": "upmyNd1zYy3R",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -162,7 +177,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RNCNC2nGjl6q"
+        "id": "RNCNC2nGjl6q",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -174,7 +192,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XQl3rdPfk4Vr"
+        "id": "XQl3rdPfk4Vr",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
@@ -189,12 +210,70 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ozdq1vD8ml5b"
+        "id": "Ozdq1vD8ml5b",
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
         "%cd /content/AdaFace/\n",
         "!python convert.py --rec_path /content/AdaFace/dataset/MS1M-ArcFace/faces_emore"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Investigate train_subset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/home/thucth/thucth/project/AdaFace\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd /home/thucth/thucth/project/AdaFace\n",
+        "with open(\"ms1mv2_train_subset_index.txt\", \"r\") as f:\n",
+        "    train_ls = f.read()\n",
+        "    train_ls = train_ls.split(\",\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "970442"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(train_ls)"
       ]
     }
   ],
@@ -206,21 +285,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "torch17",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "torch17"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8.2"
+      "name": "python3"
     }
   },
   "nbformat": 4,
